Temp fix for work sidebar and donate z-index for showcase.

--- a/client/less/component/calendar/event.import.less
+++ b/client/less/component/calendar/event.import.less
@@ -120,6 +120,9 @@
             line-height: 32px;
             margin: 20px;
             color: @melon;
+            text-align: left;
+            font-size: 25px;
+            margin: 40px 50px 0px 0px;
         }
         button{
             border-color: #c7d1d2;
