--- a/client/less/template/community.import.less
+++ b/client/less/template/community.import.less
@@ -11,6 +11,7 @@
     //margin-top: -115px;
     border-bottom: 5px solid @melon;
     background-color: @gray50;
+    z-index: 9; //to hide work menu
 	article{
 		background: @white;
 		padding: 145px 200px 125px 200px;
