--- a/client/less/template/donate.import.less
+++ b/client/less/template/donate.import.less
@@ -2,7 +2,7 @@
 //Donate Object
 .donate-object{
     width: 100%;
-    z-index: 1;
+    z-index: 101;
     top: 33px;
     .easeInOutAll1000;
     background-color: #fff;
@@ -10,7 +10,7 @@
     border-bottom: 5px solid @melon;
     border-top: 5px solid @melon;
     height: 1000px; 
-    margin-top: -1010px;
+    margin-top: -1050px;
     .donate-inner{
         padding:60px 30px 30px 30px;
         margin: 0 auto;
