--- a/client/less/template/work.import.less
+++ b/client/less/template/work.import.less
@@ -274,7 +274,8 @@
     menu.fixed{
         position: fixed;
         right: 0px;
-        bottom: 0px;
+        //bottom: 0px; For new Menu Style
+        top:0px;
     }
     menu.fixed.bottom{
         position: absolute;
@@ -294,7 +295,7 @@
 }
 
 
-section#work:after {
+section#work:after, section#our-work:after {
     content: '';
     position: absolute;
     width: 30%;
